Add implementations of API interfaces
